Banner added in Home page

--- a/src/Pages/Common/Header/Navbar/Topbar.css
+++ b/src/Pages/Common/Header/Navbar/Topbar.css
@@ -1,6 +1,7 @@
 .topbar {
-  background-color: #125B50;
+  background-color: #F8B400;
   color: #FAF5E4;
+  padding: 15px 0;
 }
 
 .topbar-container {
