--- a/src/Pages/Cources/Cource/Cource.css
+++ b/src/Pages/Cources/Cource/Cource.css
@@ -12,6 +12,20 @@
   border-radius: 10px 10px 0 0;
 }
 
+.cource h4 {
+  margin: 10px 0;
+  font-size: 18px;
+  font-weight: 500;
+  color: #125B50;
+}
+
+.cource h2 {
+  color: #FF6363;
+  font-size: 20px;
+  font-weight: 500;
+  margin-top: 20px;
+}
+
 .cource:hover {
   box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px, rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
 }
