--- a/src/Pages/AboutMe/AboutMe.css
+++ b/src/Pages/AboutMe/AboutMe.css
@@ -6,12 +6,51 @@
 .about h2 {
   font-size: 45px;
   text-align: center;
+  color: #125B50;
 }
 
 .about-me {
   width: 85%;
-  margin: 0 auto;
-  display: flex;
-  justify-content: space-between;
+  margin: 40px auto;
+  display: grid;
+  grid-template-columns: 1fr 2fr;
+  grid-gap: 80px;
   align-items: center;
+  box-shadow: 0px 0px 3px gray;
+  border-radius: 10px;
 }
+
+.image {
+  box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
+  border-radius: 10px 0 0 10px;
+  background-color: #FAF5E4;
+}
+
+.image img {
+  width: 90%;
+}
+
+.details {
+  padding: 40px;
+}
+
+.details h3 {
+  font-size: 40px;
+  font-weight: 500;
+  line-height: 80px;
+  color: #125B50;
+}
+
+.details p {
+  font-size: 16px;
+  line-height: 27px;
+  color: #353636;
+  text-align: justify;
+  margin-bottom: 15px;
+}
+
+.details span {
+  color: #125B50;
+  font-weight: 500;
+}
+
