--- a/src/Pages/Cources/Cource/Cource.css
+++ b/src/Pages/Cources/Cource/Cource.css
@@ -19,11 +19,12 @@
   color: #125B50;
 }
 
-.cource h2 {
+.cources-container .cource h2 {
   color: #FF6363;
   font-size: 20px;
   font-weight: 500;
   margin-top: 20px;
+  text-align: left;
 }
 
 .cource:hover {
