Made the Home page fully responsive

--- a/src/Pages/Common/Header/Navbar/Nav.css
+++ b/src/Pages/Common/Header/Navbar/Nav.css
@@ -25,3 +25,22 @@
   transition: 0.5s;
   cursor: pointer;
 }
+
+/* Responsive */
+@media only screen and (max-width: 480px) {
+  .navbar {
+    width: 90%;
+    flex-direction: column;
+  }
+  .menu-items {
+    flex-direction: column;
+    width: 100%;
+    background-color: #A1E3D8;
+    border-radius: 5px;
+    margin-top: 12px;
+  }
+  .menu-items a {
+    margin-right: 0 !important;
+    margin: 8px 0;
+  }
+}
