--- a/src/Pages/Common/Header/Navbar/Topbar.css
+++ b/src/Pages/Common/Header/Navbar/Topbar.css
@@ -36,3 +36,10 @@
 .top-right a:hover {
   color: #FF6363;
 }
+
+/* Responsive */
+@media only screen and (max-width: 480px) {
+  .topbar {
+    display: none;
+  }
+}
