--- a/src/Pages/Cources/Cource/Cource.css
+++ b/src/Pages/Cources/Cource/Cource.css
@@ -30,3 +30,11 @@
 .cource:hover {
   box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px, rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
 }
+
+/* Responsive */
+@media only screen and (max-width: 480px) {
+  .cource {
+    width: 100%;
+    margin-bottom: 20px;
+  }
+}
