--- a/src/Pages/Home/Contact/Contact.css
+++ b/src/Pages/Home/Contact/Contact.css
@@ -79,3 +79,13 @@
   display: block;
   cursor: pointer;
 }
+
+/* Responsive */
+@media only screen and (max-width: 480px) {
+  .contact-container {
+    grid-template-columns: 1fr;
+    grid-gap: 20px;
+    padding-bottom: 20px;
+    margin-bottom: 20px;
+  }
+}
