--- a/src/Pages/Home/Features/Feature/Feature.css
+++ b/src/Pages/Home/Features/Feature/Feature.css
@@ -27,3 +27,10 @@
 .feature:nth-child(2) {
   background-color: #FAF5E4;
 }
+
+/* Responsive */
+@media only screen and (max-width: 480px) {
+  .feature {
+    width: 100%;
+  }
+}
