--- a/src/Pages/Home/Features/Features.css
+++ b/src/Pages/Home/Features/Features.css
@@ -11,3 +11,15 @@
   box-shadow: rgba(17, 12, 46, 0.15) 0px 48px 100px 0px;
   border-radius: 12px;
 }
+
+/* responsive */
+@media only screen and (max-width: 480px) {
+  .features-container {
+    width: 85%;
+    margin: 0 auto;
+    padding: 30px 0;
+  }
+  .features {
+    flex-direction: column;
+  }
+}
