--- a/src/Pages/Home/Ratings/Ratings.css
+++ b/src/Pages/Home/Ratings/Ratings.css
@@ -27,3 +27,17 @@
 .ratings-container p {
   font-weight: 500;
 }
+
+/* Responsive */
+@media only screen and (max-width: 480px) {
+  .ratings {
+    padding: 50px 0;
+    margin-bottom: 40px;
+  }
+  .ratings-container h2 {
+    font-size: 30px;
+  }
+  .ratings-container hr {
+    margin-bottom: 20px;
+  }
+}
